# core

./: Cargo.toml  GEMINI.md  README.md  TODO.md  config.yaml  dvdrental_schema.json  plan.txt  plan_review.md  test_opt  test_opt.rs  test_replace.py
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/dto/: mod.rs  scan.rs
src/api/routes/: health.rs  mod.rs  scan.rs
src/app_config/: mod.rs
src/scanner/: mock.rs  mod.rs  traits.rs
src/schema/: mod.rs
src/service/: database_service.rs  mod.rs
