[package]
name = "pgdash-core"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.1"
config = {version="0.15.19", features=["yaml", "json", "ron"]}
deadpool-postgres = "0.14.1"
diesel = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[[bin]]
name="pgdash-core"
path="src/main.rs"

[lib]
name="pgdash_lib"
path="src/lib.rs"
